# poetry_function_modeling_dashboard

./: README.md  manage.py  pyproject.toml
function_modeling/: admin.py  models.py  tasks.py  views.py
function_modeling/migrations/: 0001_initial.py  0002_auto_20210915_0257.py  0003_alter_data_model.py  0004_auto_20210916_1514.py  0005_auto_20211012_1814.py
function_modeling_dashboard/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_poetry_function_modeling_dashboard.py
